<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="center">

        <TextView
            android:id="@+id/register_now1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="9dp"
            android:text="@string/register_now"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/forgot_password"
            app:layout_constraintEnd_toStartOf="@+id/register_now2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_now2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="35dp"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:textColor="@color/dellBule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_now1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="6dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_now1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>