<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment"
    style="@style/Widget.MyApp.TextInputLayout"
    >
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="450dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sos_desc"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_problem"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_problem"
        app:endIconMode="dropdown_menu"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <AutoCompleteTextView
            android:id="@+id/shop_type_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:inputType="none"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="112dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sosButton" />

    <Button
        android:id="@+id/sos_button"
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/red"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/sos"
        android:textSize="30dp"
        android:textColor="@android:color/white" />

</LinearLayout>