<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="47dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="28dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="74dp"
        android:text="@string/splash_desc"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="103dp"
        android:onClick="opernLoginActivity"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="358dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/location_car" />


</androidx.constraintlayout.widget.ConstraintLayout>